ext/gl/gstglimagesink.c
@@ -933,9 +933,12 @@ gst_glimage_sink_propose_allocation (GstBaseSink * bsink, GstQuery * query)
   gst_object_unref (allocator);
 
 #if GST_GL_HAVE_PLATFORM_EGL
-  allocator = gst_allocator_find (GST_EGL_IMAGE_MEMORY_TYPE);
-  gst_query_add_allocation_param (query, allocator, &params);
-  gst_object_unref (allocator);
+  if (gst_gl_context_check_feature (glimage_sink->context,
+          "EGL_KHR_image_base")) {
+    allocator = gst_allocator_find (GST_EGL_IMAGE_MEMORY_TYPE);
+    gst_query_add_allocation_param (query, allocator, &params);
+    gst_object_unref (allocator);
+  }
 #endif
 
   return TRUE;
